--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-simple-code-editor": "^0.14.1",
-    "tiktoken": "^1.0.21"
+    "react-simple-code-editor": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
