--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "openai": "^4.97.0",
+    "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
